iac-macro-usage/tests/fails/lambda_time_not_a_number.stderr
error: expected integer literal
 --> tests/fails/lambda_time_not_a_number.rs:5:30
  |
5 |         lambda(name=name,mem="yes")
  |                              ^^^^^
